--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,8 +27,8 @@
           </div>
 
           <nav>
-            <a href="{{ site.baseurl }}/">Blog</a>
-            <a href="{{ site.baseurl }}/about">About</a>
+            <a href="{{ site.baseurl }}/legal">Legal/Impressum</a>
+            <a href="{{ site.baseurl }}/privacy">Privacy/Datenschutz</a>
           </nav>
         </header>
       </div>
@@ -45,7 +45,5 @@
         </footer>
       </div>
     </div>
-
-    {% include analytics.html %}
   </body>
 </html>
