--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,8 +27,8 @@
           </div>
 
           <nav>
-            <a href="{{ site.baseurl }}/legal">Legal/Impressum</a>
-            <a href="{{ site.baseurl }}/privacy">Privacy/Datenschutz</a>
+            <a href="{{ site.baseurl }}/legal">Legal</a>
+            <a href="{{ site.baseurl }}/privacy">Privacy</a>
           </nav>
         </header>
       </div>
@@ -43,6 +43,10 @@
         <footer class="footer">
           {% include svg-icons.html %}
         </footer>
+        <div>
+          <a href="{{ site.baseurl }}/legal">Impressum</a> 
+          <a href="{{ site.baseurl }}/privacy">Datenschutz</a>
+        </div>
       </div>
     </div>
   </body>
