--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
           </div>
 
           <nav>
-            <a href="{{ site.baseurl }}/legal">Legal</a>
+            <a href="{{ site.baseurl }}/imprint">Legal</a>
             <a href="{{ site.baseurl }}/privacy">Privacy</a>
           </nav>
         </header>
@@ -44,11 +44,12 @@
         <footer class="footer">
           {% include svg-icons.html %}
         </footer>
-        <div>
-          <a href="{{ site.baseurl }}/legal">Impressum</a> 
-          <a href="{{ site.baseurl }}/privacy">Datenschutz</a>
-        </div>
       </div>
     </div>
+    
+    <div>
+        <a href="{{ site.baseurl }}/legal">Impressum</a> 
+        <a href="{{ site.baseurl }}/privacy">Datenschutz</a>
+      </div>
   </body>
 </html>
