--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,7 +47,7 @@
       </div>
     </div>
     
-    <div>
+    <div class="below-footer">
         <a href="{{ site.baseurl }}/legal">Impressum</a> 
         <a href="{{ site.baseurl }}/privacy">Datenschutz</a>
       </div>
