--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,11 +26,6 @@
             <h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
             <p class="site-description">{{ site.description }}</p>
           </div>
-
-          <nav>
-            <a href="{{ site.baseurl }}/imprint">Legal</a>
-            <a href="{{ site.baseurl }}/privacy">Privacy</a>
-          </nav>
         </header>
       </div>
     </div>
@@ -48,8 +43,9 @@
     </div>
     
     <div class="below-footer">
-        <a href="{{ site.baseurl }}/legal">Impressum</a> 
-        <a href="{{ site.baseurl }}/privacy">Datenschutz</a>
+        <a href="{{ site.baseurl }}/legal">Legal / Impressum</a>
+           |   
+        <a href="{{ site.baseurl }}/privacy">Privacy \ Datenschutz</a>
       </div>
   </body>
 </html>
