--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,7 +43,7 @@
     </div>
     
     <div class="below-footer">
-        <a href="{{ site.baseurl }}/legal">Legal / Impressum</a>
+        <a href="{{ site.baseurl }}/imprint">Legal / Impressum</a>
            |   
         <a href="{{ site.baseurl }}/privacy">Privacy \ Datenschutz</a>
       </div>
